Bug 420503 - konsole 20.04 steals Alt+n switch to tab shorcuts configured on yakuake
Summary: konsole 20.04 steals Alt+n switch to tab shorcuts configured on yakuake
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 20.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-24 10:03 UTC by sahsanu
Modified: 2020-06-02 13:11 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sahsanu 2020-04-24 10:03:53 UTC
SUMMARY


STEPS TO REPRODUCE
1. Configure switch to tab shortcuts on Yakuake like Alt+1, Alt+2, etc.
2. Try to use them in Yakuake


OBSERVED RESULT
You get this message: The key sequence 'Alt+1' is ambiguous. Use 'Configure Shortcuts' from the 'Settings' menu to solve the ambiguity.No action will be triggered.


EXPECTED RESULT
Configured switch to tab shortcuts should work fine on yakuake.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon
KDE Plasma Version: 5.18.4 
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.1


ADDITIONAL INFORMATION
Today I've upgraded KDE Applications to 20.04. I already had switch to tab shortcuts configured on Yakuake (Alt+1, Alt+2, etc.) and after the Applications upgrade, the shortcuts don't work. I've realized Konsole 20.04 adds this functionality "The latest version of Konsole lets you use the Alt key + a number key to jump directly to any of the first 9 tabs." so seems it is related to this new functionality.

It doesn't matter whether I set to none (or use for example Ctrl+1 instead of Alt+1) the switch to tab shortcuts in Konsole's preferences. Yakuake can't use Alt+n  keys combination assigned to switch to tab shortcuts even if Konsole is not using them in its shortcuts preferences.
Comment 1 Axel 2020-04-24 13:35:49 UTC
I can confirm this bug in Archlinux too. The only workaround I found was downgraded Konsole to v19.12.3.

I tried to find the global shortcut but I found nothing.
Konsole can use the Alt+<n> to switch between tabs without issues. I removed this, but Yakuake is still throwing the dialog.
I tested the live Kubuntu 20.04 and works fine but is using the KDE apps at v19.12.3, not latest v20.04.
I downgraded the Yakuake to v19.12.3, and the error is still happening.
I uninstalled Yakuake, removed ~/.config/yakuakerc, reinstall latest, and still happening.

So, I thing there is some other KDE app v20.04 that has that shortcut set, but I can't find it.

I run this command, but I can't find a Alt+2 shortcut

grep Alt+ {~/.config/kdeglobals,~/.config/kglobalshortcutsrc,~/.config/khotkeysrc,~/.config/kwinrc,~/.config/plasma-org.kde.plasma.desktop-appletsrc,~/.local/share/kxmlgui5/katepart/katepart5ui.rc,~/.local/share/kxmlgui5/konsole/konsoleui.rc,~/.local/share/kxmlgui5/konsole/sessionui.rc,~/.local/share/kxmlgui5/kwrite/kwriteui.rc}

My ~/.config/yakuakerc

[Appearance]
TerminalHighlightOnManualActivation=true
Translucency=true

[Desktop Entry]
DefaultProfile=

[Dialogs]
FirstRun=false

[Favorite Profiles]
Favorites=Profile 1.profile

[Shortcuts]
switch-to-session-1=Alt+1
switch-to-session-10=Alt+0
switch-to-session-2=Alt+2
switch-to-session-3=Alt+3
switch-to-session-4=Alt+4
switch-to-session-5=Alt+5
switch-to-session-6=Alt+6
switch-to-session-7=Alt+7
switch-to-session-8=Alt+8
switch-to-session-9=Alt+9

[Window]
DynamicTabTitles=true
Height=80
Comment 2 Guglielmo Felici 2020-04-29 16:19:19 UTC
Same to me in Manjaro.

Operating System: Manjaro Linux 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.4.35-1-MANJARO
OS Type: 64-bit
Comment 3 Quentin 2020-04-29 16:24:24 UTC
Similar to https://bugs.kde.org/show_bug.cgi?id=415164
Comment 4 Ricardo J. Barberis 2020-05-03 21:01:40 UTC
FWIW, I'm suffering from the same problem.

In the linked bug report (415164) someone suggests replacing yakuake with 'konsole --background-mode' but that's just not the same, either functionally nor aesthetically.


Operating System: Slackware 14.2+ (-current)
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.13.2
Kernel Version: 5.4.38
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-4200U CPU @ 1.60GHz
Memory: 7,7 GiB
Comment 5 Peter Wu 2020-05-08 20:45:30 UTC
Bug 415164 is about interception of Ctrl-Alt+Left/Right.

This bug is about Alt+n no longer being functional. I first noticed it with irssi in Yakuake no longer acting on Alt+n. It turns out to be a regression from a new feature introduced with Bug 416362 where Alt+n switches between tabs, bisection points to https://cgit.kde.org/konsole.git/commit/?id=8f25012b426534a0c1c72928a97c573bdd513049

Alt-n is a default shortcut for "digit-argument" (M-0, M-1, ...) as documented in the readline(3) manual. There may be other programs where Alt is significant, this is a classic case of https://xkcd.com/1172/

In Konsole, this issue can be solved by disabling Settings -> Configure Keyboard Shortcuts and disabling "Switch to Tab [number]" for every number 1 to 9. Yakuake does not have such an option though. I am using konsole and yakuake 20.04.0-1 on Arch Linux.

I personally would like this change to be reverted, but if everyone thinks this new shortcut (in either Konsole or Yakuake) is a good idea, I can live with that.
Comment 6 Nate Graham 2020-05-08 23:02:22 UTC
Since Yakuake use the Konsole KPart, there seems to be a fairly obvious solution: implement the shortcuts in the KPart itself, so Yakuake gets them automatically.
Comment 7 Axel 2020-06-01 13:56:13 UTC
Git commit 13697e07d9290f3c14d57ec27884bb9756999f27 by Axel Navarro.
Committed on 01/06/2020 at 03:26.
Pushed by tcanabrava into branch 'release/20.04'.

Fix override switch-to-tab action in Yakuake

Add the switch-to-tab-%i actions in ViewManager to the
_multiTabOnlyActions collection to allow override them in Yakuake

M  +1    -0    src/ViewManager.cpp

https://invent.kde.org/utilities/konsole/commit/13697e07d9290f3c14d57ec27884bb9756999f27
Comment 8 Kurt Hindenburg 2020-06-02 13:11:44 UTC
Git commit 0c3240a1bef1eba5f35b0ad90d2d50c096edae2a by Kurt Hindenburg, on behalf of Axel Navarro.
Committed on 02/06/2020 at 13:11.
Pushed by hindenburg into branch 'master'.

Fix override switch-to-tab action in Yakuake

Add the switch-to-tab-%i actions in ViewManager to the
_multiTabOnlyActions collection to allow override them in Yakuake
(cherry picked from commit 13697e07d9290f3c14d57ec27884bb9756999f27)

M  +1    -0    src/ViewManager.cpp

https://invent.kde.org/utilities/konsole/commit/0c3240a1bef1eba5f35b0ad90d2d50c096edae2a