Fix override switch-to-tab action in Yakuake

Add the switch-to-tab-%i actions in ViewManager to the
_multiTabOnlyActions collection to allow override them in Yakuake

BUG: 420503
(cherry picked from commit 13697e07d9290f3c14d57ec27884bb9756999f27)